--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ section {
 
 img {
   border-radius: 999px;
+  border: 1px solid #333;
 }
 
 h1 {
@@ -30,6 +31,7 @@ h1 {
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  text-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
 }
 
 p {
@@ -39,31 +41,51 @@ p {
   font-style: normal;
   font-weight: 300;
   line-height: normal;
+  text-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
 }
 
-button {
+a {
+  display: flex;
   width: 100%;
-  padding: 8px 0;
+  height: 48px;
   margin-bottom: 8px;
   border-radius: 6px;
   border: 2px solid #29ffd9;
   background: #363636;
   color: #fff;
+  text-decoration: none;
+  transition: all 0.3s;
+  box-shadow:
+    0 10px 15px -3px rgb(0 0 0 / 0.1),
+    0 4px 6px -4px rgb(0 0 0 / 0.1);
 }
 
-button:nth-child(2) {
+a span {
+  margin: auto;
+}
+
+a:hover {
+  color: #363636;
+  background: #fff;
+  font-size: 21px;
+  box-shadow:
+    0 20px 25px -5px rgb(0 0 0 / 0.1),
+    0 8px 10px -6px rgb(0 0 0 / 0.1);
+}
+
+a:nth-child(2) {
   border: 2px solid #3b48bb;
 }
 
-button:nth-child(3) {
+a:nth-child(3) {
   border: 2px solid #ff2929;
 }
 
-button:nth-child(4) {
+a:nth-child(4) {
   border: 2px solid #5096fe;
 }
 
-button:nth-child(5) {
+a:nth-child(5) {
   border: 2px solid #ff5ac7;
 }
 footer {
